Rozbudowa mechanizmu logowania i metoda doInBackground

--- a/app/src/main/res/layout/activity_logowanie.xml
+++ b/app/src/main/res/layout/activity_logowanie.xml
@@ -14,7 +14,7 @@
         tools:layout_editor_absoluteX="8dp">
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -22,7 +22,7 @@
             android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/haslo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -30,10 +30,11 @@
             android:inputType="textPassword" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/zaloguj"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:onClick="zaloguj"
             android:text="@string/zaloguj" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
