--- a/app/src/main/res/layout/activity_panel_glowny.xml
+++ b/app/src/main/res/layout/activity_panel_glowny.xml
@@ -6,4 +6,33 @@
     android:layout_height="match_parent"
     tools:context="com.example.danielk.planermrp.PanelGlowny">
 
+    <LinearLayout
+        android:layout_width="344dp"
+        android:layout_height="495dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
+
+        <Button
+            android:id="@+id/stworzPlan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="stworzPlan"
+            android:text="1.Stwórz nowy plan" />
+
+        <Button
+            android:id="@+id/wpisDoBazy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="wpisDoBazy"
+            android:text="2.Dodaj nowy wpis do bazy danych" />
+
+        <Button
+            android:id="@+id/informacje"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="informacje"
+            android:text="3.Informacje o programie" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
