--- a/app/src/main/res/xml/login_settings.xml
+++ b/app/src/main/res/xml/login_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="Ustawienia logowania">
-        <CheckBoxPreference android:key="pref_save"
+        <CheckBoxPreference android:key="pref_zapisz"
             android:title="Zapamiętuj dane logowania"
             android:summary="Zapamiętuj login i hasło użytkownika po ostatnim zalogowaniu"
             android:defaultValue="true"/>
