--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,2 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string-array name="typ_produktu">
+        <item>Materiał</item>
+        <item>Półprodukt</item>
+        <item>Produkt</item>
+    </string-array>
+</resources>
