--- a/app/src/main/res/xml/login_settings.xml
+++ b/app/src/main/res/xml/login_settings.xml
@@ -3,7 +3,6 @@
     <PreferenceCategory android:title="Ustawienia logowania">
         <CheckBoxPreference android:key="pref_zapisz"
             android:title="Zapamiętuj dane logowania"
-            android:summary="Wypełnij pola login i hasło danymi użytkownika zapamiętanymi po ostatnim logowaniu"
-            android:defaultValue="true"/>
+            android:summary="Wypełnij pola login i hasło danymi użytkownika zapamiętanymi po ostatnim logowaniu" />
     </PreferenceCategory>
 </PreferenceScreen>
