--- a/app/src/main/res/layout/activity_informacje.xml
+++ b/app/src/main/res/layout/activity_informacje.xml
@@ -6,4 +6,63 @@
     android:layout_height="match_parent"
     tools:context="com.example.danielk.planermrp.Informacje">
 
+    <LinearLayout
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <TextView
+                    android:id="@+id/O aplikacji"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="O aplikacji"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/Planer MRP v0.99"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Planer MRP v0.99"
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/Opis aplikacji"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.78"
+                    android:ems="10"
+                    android:inputType="textMultiLine"
+                    android:text="Aplikacja dla systemu Android która pozwoli planistom firmy meblowej:
+                    \n -Przygotować plan produkcji wg algorytmu MRP uwzględniając czas potrzebny na wyprodukowanie produktu.
+                    \n -Ocenić koszt oraz czas potrzebny do wyprodukowania wg przygotowanego planu przez aplikacje.
+                    \n -Pobrać z bazy danych informacje o produktach które się tam znajdują oraz materiałach z których się składa wybrany produkt.
+                    \n -Dodawać nowe produkty do bazy danych które składać się będą z wybieranych materiałów a ich koszt będzie sugerowany na podstawie kosztu pojedynczego materiału.
+                    \n -Aplikacja będzie miała wspomagać decyzje dotyczące ceny produktu (obliczany będzie koszt materiałów potrzebnych do produkcji) oraz daty rozpoczęcia produkcji (wg czasu potrzebnego do wyprodukowania)
+                    \n -Ponadto postaramy się aby gotowy stworzony plan został zapisywany w formie plików Excel'owskich na urządzeniu mobilnym.
+                    \n Wszelkie informacje dotyczące bazy danych pobierane są z sieci."
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+
+            </LinearLayout>
+        </ScrollView>
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
