--- a/app/src/main/res/layout/activity_informacje.xml
+++ b/app/src/main/res/layout/activity_informacje.xml
@@ -1,68 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.danielk.planermrp.Informacje">
 
-    <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="1">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/o_aplikacji"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:weightSum="1">
+                android:text="@string/o_aplikacji"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/O aplikacji"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="O aplikacji"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/Planer_MRP_v0.99"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/planer_mrp_v0_99"
+                android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/Planer MRP v0.99"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Planer MRP v0.99"
-                    android:textSize="20sp" />
+            <EditText
+                android:id="@+id/Opis_aplikacji"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1.02"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:text="@string/OpisApki"
+                android:textSize="20sp" />
 
-                <EditText
-                    android:id="@+id/Opis aplikacji"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.78"
-                    android:ems="10"
-                    android:inputType="textMultiLine"
-                    android:text="Aplikacja dla systemu Android która pozwoli planistom firmy meblowej:
-                    \n -Przygotować plan produkcji wg algorytmu MRP uwzględniając czas potrzebny na wyprodukowanie produktu.
-                    \n -Ocenić koszt oraz czas potrzebny do wyprodukowania wg przygotowanego planu przez aplikacje.
-                    \n -Pobrać z bazy danych informacje o produktach które się tam znajdują oraz materiałach z których się składa wybrany produkt.
-                    \n -Dodawać nowe produkty do bazy danych które składać się będą z wybieranych materiałów a ich koszt będzie sugerowany na podstawie kosztu pojedynczego materiału.
-                    \n -Aplikacja będzie miała wspomagać decyzje dotyczące ceny produktu (obliczany będzie koszt materiałów potrzebnych do produkcji) oraz daty rozpoczęcia produkcji (wg czasu potrzebnego do wyprodukowania)
-                    \n -Ponadto postaramy się aby gotowy stworzony plan został zapisywany w formie plików Excel'owskich na urządzeniu mobilnym.
-                    \n Wszelkie informacje dotyczące bazy danych pobierane są z sieci."
-                    android:textSize="20sp" />
+            <TextView
+                android:id="@+id/Wymagania"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/wymagania_aplikacji"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
+            <EditText
+                android:id="@+id/Wymaganiaopis"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:text="@string/Opiswymagan"
+                android:textSize="20sp" />
 
-            </LinearLayout>
-        </ScrollView>
+            <TextView
+                android:id="@+id/Autorzy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/autorzy"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
-    </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+            <EditText
+                android:id="@+id/Autorzyopis"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.01"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:text="@string/NazwiskaAutor"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+    </ScrollView>
+
+</RelativeLayout>
