--- a/app/src/main/res/layout/activity_tworzenie_planu.xml
+++ b/app/src/main/res/layout/activity_tworzenie_planu.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.danielk.planermrp.TworzeniePlanu">
+    tools:context="com.example.danielk.planermrp.TworzeniePlanu"
+    android:orientation="horizontal">
 
-</RelativeLayout>
+    <ListView
+        android:layout_width="195dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/list_view"></ListView>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="TextView" />
+
+
+</LinearLayout>
