listview wewnatrza scroll layout - dynamiczne tworzenie checkboxow - protokol polaczeniowy

--- a/app/src/main/res/layout/activity_wpis_do_bazy.xml
+++ b/app/src/main/res/layout/activity_wpis_do_bazy.xml
@@ -133,7 +133,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <EditText
                     android:id="@+id/nazwaPolproduktu"
@@ -183,6 +183,11 @@
                     android:hint="@string/wielkosc_partii"
                     android:inputType="number"
                     android:textSize="18sp" />
+
+                <ListView
+                    android:id="@+id/materialy"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
                 <Button
                     android:id="@+id/wyslijPolprodukt"
