--- a/app/src/main/res/layout/activity_tworzenie_planu.xml
+++ b/app/src/main/res/layout/activity_tworzenie_planu.xml
@@ -75,6 +75,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="40dp"
         android:layout_marginTop="40dp">
 
         <LinearLayout
@@ -124,6 +125,7 @@
                         android:layout_marginStart="45dp"
                         android:hint="0" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -162,6 +164,7 @@
                         android:layout_marginStart="45dp"
                         android:hint="0" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -200,6 +203,7 @@
                         android:layout_marginStart="45dp"
                         android:hint="0" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -238,6 +242,7 @@
                         android:layout_marginStart="45dp"
                         android:hint="0" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -276,6 +281,7 @@
                         android:layout_marginStart="45dp"
                         android:hint="0" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -314,6 +320,7 @@
                         android:layout_marginStart="45dp"
                         android:hint="0" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -352,6 +359,7 @@
                         android:layout_marginStart="45dp"
                         android:hint="0" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -390,6 +398,7 @@
                         android:layout_marginStart="45dp"
                         android:hint="0" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -428,6 +437,7 @@
                         android:layout_marginStart="45dp"
                         android:hint="0" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -472,5 +482,17 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="11dp"
+        android:layout_marginRight="11dp"
+        android:onClick="stworzPlan"
+        android:text="Stwórz plan" />
 
 </RelativeLayout>
