--- a/app/src/main/res/layout/activity_tworzenie_planu.xml
+++ b/app/src/main/res/layout/activity_tworzenie_planu.xml
@@ -493,6 +493,6 @@
         android:layout_marginEnd="11dp"
         android:layout_marginRight="11dp"
         android:onClick="stworzPlan"
-        android:text="Stwórz plan" />
+        android:text="@string/stw_rz_plan" />
 
 </RelativeLayout>
